--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
         "typecheck": "tsc -p tsconfig.json --noEmit"
     },
     "dependencies": {
-        "canvas": "^2.11.2",
+        "canvas": "^2.10.2",
+        "chalk": "^5.3.0",
         "commander": "^11.0.0",
+        "conf": "^12.0.0",
         "yoga-layout-prebuilt": "^1.10.0",
         "zod": "^3.22.2"
     },
     "devDependencies": {
         "@antfu/eslint-config": "^0.39.5",
+        "@types/conf": "^3.0.0",
         "@types/node": "^20.4.8",
         "@types/pixelmatch": "^5.2.4",
         "@types/pngjs": "^6.0.1",
