Fix commands and ci.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,5 +54,6 @@ jobs:
 
             - run: pnpm install
             - run: pnpm build
+            - run: pnpm dev
 
             - run: pnpm test:e2e
