--- a/turbo.json
+++ b/turbo.json
@@ -6,6 +6,7 @@
             "outputs": ["!.next/cache/**", ".next/**", "dist/**"]
         },
         "lint": {},
+        "format": {},
         "typecheck": {},
         "test": {
             "dependsOn": ["^build"]
