--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node }}
-                  cache: 'pnpm'
+                  cache: "pnpm"
 
             - run: pnpm install
             - run: pnpm build
@@ -50,10 +50,15 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node }}
-                  cache: 'pnpm'
+                  cache: "pnpm"
 
             - run: pnpm install
-            - run: pnpm build
-            - run: pnpm dev --filter www
 
-            - run: pnpm test:e2e
+            - name: Run E2E tests
+              uses: cypress-io/github-action@v3
+              with:
+                  project: ./apps/www
+                  browser: chrome
+                  build: pnpm build
+                  start: pnpm start
+                  wait-on: "http://localhost:3000"
