--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,37 +28,37 @@ jobs:
 
             - run: pnpm install
             - run: pnpm build
-            - run: pnpm typecheck
-            - run: pnpm lint
-            - run: pnpm format
+            # - run: pnpm typecheck
+            # - run: pnpm lint
+            # - run: pnpm format
             - run: pnpm test
 
-    e2e:
-        runs-on: ${{ matrix.os }}
+    # e2e:
+    #     runs-on: ${{ matrix.os }}
 
-        strategy:
-            matrix:
-                os: [ubuntu-latest]
-                node: [20]
+    #     strategy:
+    #         matrix:
+    #             os: [ubuntu-latest]
+    #             node: [20]
 
-        steps:
-            - uses: actions/checkout@v3
-            - uses: pnpm/action-setup@v2
-              with:
-                  version: 8
+    #     steps:
+    #         - uses: actions/checkout@v3
+    #         - uses: pnpm/action-setup@v2
+    #           with:
+    #               version: 8
 
-            - uses: actions/setup-node@v3
-              with:
-                  node-version: ${{ matrix.node }}
-                  cache: "pnpm"
+    #         - uses: actions/setup-node@v3
+    #           with:
+    #               node-version: ${{ matrix.node }}
+    #               cache: "pnpm"
 
-            - run: pnpm install
+    #         - run: pnpm install
 
-            - name: Run E2E tests
-              uses: cypress-io/github-action@v3
-              with:
-                  project: ./apps/www
-                  browser: chrome
-                  build: pnpm build
-                  start: pnpm start
-                  wait-on: "http://localhost:3000"
+    #         - name: Run E2E tests
+    #           uses: cypress-io/github-action@v3
+    #           with:
+    #               project: ./apps/www
+    #               browser: chrome
+    #               build: pnpm build
+    #               start: pnpm start
+    #               wait-on: "http://localhost:3000"
