--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -64,6 +64,7 @@
         "@vitest/coverage-v8": "^0.34.4",
         "cross-env": "^7.0.3",
         "eslint": "^8.43.0",
+        "esno": "^4.0.0",
         "execa": "^8.0.1",
         "pixelmatch": "^5.3.0",
         "pngjs": "^7.0.0",
