--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,32 +33,47 @@ jobs:
             # - run: pnpm format
             - run: pnpm test
 
-    # e2e:
-    #     runs-on: ${{ matrix.os }}
+    e2e:
+        runs-on: ${{ matrix.os }}
 
-    #     strategy:
-    #         matrix:
-    #             os: [ubuntu-latest]
-    #             node: [20]
+        strategy:
+            matrix:
+                os: [ubuntu-latest]
+                node: [20]
 
-    #     steps:
-    #         - uses: actions/checkout@v3
-    #         - uses: pnpm/action-setup@v2
-    #           with:
-    #               version: 8
+        steps:
+            - uses: actions/checkout@v3
+            - uses: pnpm/action-setup@v2
+              with:
+                  version: 8
 
-    #         - uses: actions/setup-node@v3
-    #           with:
-    #               node-version: ${{ matrix.node }}
-    #               cache: "pnpm"
+            - uses: actions/setup-node@v3
+              with:
+                  node-version: ${{ matrix.node }}
+                  cache: "pnpm"
 
-    #         - run: pnpm install
+            - name: Get pnpm store directory
+              shell: bash
+              run: |
+                  echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
-    #         - name: Run E2E tests
-    #           uses: cypress-io/github-action@v3
-    #           with:
-    #               project: ./apps/www
-    #               browser: chrome
-    #               build: pnpm build
-    #               start: pnpm start
-    #               wait-on: "http://localhost:3000"
+            - name: Setup pnpm cache
+              uses: actions/cache@v3
+              with:
+                  path: ${{ env.STORE_PATH }}
+                  key: ${{ runner.os }}-pnpm-store-${{ hashFiles('apps/www/pnpm-lock.yaml') }}
+                  restore-keys: |
+                      ${{ runner.os }}-pnpm-store-
+
+            - run: pnpm install
+
+            - name: Run E2E tests
+              uses: cypress-io/github-action@v6
+              with:
+                  install: false
+                  working-directory: apps/www
+                  project: apps/www
+                  browser: chrome
+                  build: pnpm build
+                  start: pnpm start
+                  wait-on: "http://localhost:3000"
