--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,25 +52,24 @@ jobs:
                   node-version: ${{ matrix.node }}
                   cache: "pnpm"
 
-            - name: Get pnpm store directory
-              shell: bash
-              run: |
-                  echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+            # - name: Get pnpm store directory
+            #   shell: bash
+            #   run: |
+            #       echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
-            - name: Setup pnpm cache
-              uses: actions/cache@v3
-              with:
-                  path: ${{ env.STORE_PATH }}
-                  key: ${{ runner.os }}-pnpm-store-${{ hashFiles('apps/www/pnpm-lock.yaml') }}
-                  restore-keys: |
-                      ${{ runner.os }}-pnpm-store-
+            # - name: Setup pnpm cache
+            #   uses: actions/cache@v3
+            #   with:
+            #       path: ${{ env.STORE_PATH }}
+            #       key: ${{ runner.os }}-pnpm-store-${{ hashFiles('apps/www/pnpm-lock.yaml') }}
+            #       restore-keys: |
+            #           ${{ runner.os }}-pnpm-store-
 
             - run: pnpm install
 
             - name: Run E2E tests
               uses: cypress-io/github-action@v6
               with:
-                  install: false
                   working-directory: apps/www
                   project: apps/www
                   browser: chrome
