--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
             - name: Run E2E tests
               uses: cypress-io/github-action@v6
               with:
-                  project: apps/www
+                  working-directory: apps/www
                   browser: chrome
                   build: pnpm build
                   start: pnpm start
