--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,11 +26,11 @@ jobs:
                   node-version: ${{ matrix.node }}
                   cache: "pnpm"
 
-            - run: pnpm install
+            - run: pnpm install --prefer-offline --frozen-lockfile --prod
             - run: pnpm build
-            # - run: pnpm typecheck
-            # - run: pnpm lint
-            # - run: pnpm format
+            - run: pnpm typecheck
+            - run: pnpm lint
+            - run: pnpm format
             - run: pnpm test
 
     e2e:
@@ -52,7 +52,7 @@ jobs:
                   node-version: ${{ matrix.node }}
                   cache: "pnpm"
 
-            - run: pnpm install
+            - run: pnpm install --prefer-offline --frozen-lockfile --prod
 
             - name: Run E2E tests
               uses: cypress-io/github-action@v6
