--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
                   cache: "pnpm"
 
             - run: pnpm install --prefer-offline --frozen-lockfile --prod
+            - run: pnpm install turbo -w
+
             - run: pnpm build
             - run: pnpm typecheck
             - run: pnpm lint
