--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "publish": "turbo build --filter=shared && turbo build --filter=cli && cd packages/cli && npm publish && cd ../../",
         "release": "cd apps/cli && changelogen --release && git push --follow-tags && npm publish"
     },
-    "devDependencies": {
+    "dependencies": {
         "eslint": "^8.53.0",
         "prettier": "^3.0.3",
         "turbo": "^1.10.4"
