--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
                   node-version: ${{ matrix.node }}
                   cache: "pnpm"
 
-            - run: pnpm install --prefer-offline --frozen-lockfile --prod
+            - run: pnpm install --frozen-lockfile
 
             - run: pnpm build
             - run: pnpm typecheck
@@ -53,5 +53,5 @@ jobs:
                   node-version: ${{ matrix.node }}
                   cache: "pnpm"
 
-            - run: pnpm install --prefer-offline --frozen-lockfile --prod
+            - run: pnpm install --frozen-lockfile
             - run: cd apps/www && cypress run --headed --browser chrome --spec 'cypress/e2e/**'
