--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,5 +53,7 @@ jobs:
                   node-version: ${{ matrix.node }}
                   cache: "pnpm"
 
+            - run: pnpm install cypress
+
             - run: pnpm install --frozen-lockfile
             - run: cd apps/www && pnpm test:e2e
