--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,13 +53,16 @@ jobs:
                   node-version: ${{ matrix.node }}
 
             - run: pnpm install --frozen-lockfile
+            - run: pnpm build
 
-            - name: Run E2E tests
-              uses: cypress-io/github-action@v6
-              with:
-                  headed: true
-                  working-directory: apps/www
-                  browser: chrome
-                  build: pnpm build
-                  start: pnpm start
-                  wait-on: "http://localhost:3000"
+            - run: cd apps/www && pnpm test:e2e
+
+            # - name: Run E2E tests
+            #   uses: cypress-io/github-action@v6
+            #   with:
+            #       headed: true
+            #       working-directory: apps/www
+            #       browser: chrome
+            #       build: pnpm build
+            #       start: pnpm start
+            #       wait-on: "http://localhost:3000"
