--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -13,5 +13,11 @@
         "target": "ESNext",
         "types": ["node", "vitest/importMeta", "vitest/globals"]
     },
-    "include": ["apps/cli/src", "test"]
+    "include": [
+        "./src/**/*.ts",
+        "./test/**/*.ts",
+        "./.eslintrc.cjs",
+        "./build.config.js",
+        "./vitest.config.ts"
+    ]
 }
