--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -33,6 +33,7 @@
     },
     "dependencies": {
         "@dach/shared": "workspace:*",
+        "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-slot": "^1.0.2",
         "class-variance-authority": "^0.7.0",
@@ -43,9 +44,11 @@
         "lucide-react": "^0.291.0",
         "next": "14.0.1",
         "next-themes": "^0.2.1",
+        "plaiceholder": "^3.0.0",
         "react": "^18",
         "react-color-palette": "^7.1.0",
         "react-dom": "^18",
+        "sharp": "^0.32.6",
         "tailwind-merge": "^2.0.0",
         "tailwindcss-animate": "^1.0.7",
         "wait-on": "^7.2.0",
@@ -61,20 +64,24 @@
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "@vitejs/plugin-react": "^4.1.1",
-        "cypress-image-diff-js": "^1.32.0",
-        "cypress-image-snapshot": "^4.0.1",
         "autoprefixer": "^10.0.1",
         "cypress": "^13.5.0",
+        "cypress-image-diff-js": "^1.32.0",
+        "cypress-image-snapshot": "^4.0.1",
         "cypress-real-events": "^1.11.0",
         "cypress-recurse": "^1.35.2",
         "eslint": "^8.0.0",
         "eslint-config-next": "14.0.1",
         "eslint-plugin-cypress": "^2.15.1",
+        "eslint-plugin-no-only-tests": "^3.1.0",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
+        "eslint-plugin-unused-imports": "^3.0.0",
         "jsdom": "^22.1.0",
         "postcss": "^8",
         "prettier": "^3.0.3",
         "tailwindcss": "^3.3.0",
         "typescript": "^5",
+        "typestrict": "^1.0.2",
         "vitest": "^0.34.4"
     },
     "packageManager": "pnpm@8.6.7"
