--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -37,7 +37,9 @@
         "cypress",
         "**/*.ts",
         "**/*.tsx",
-        ".next/types/**/*.ts"
+        ".next/types/**/*.ts",
+        ".eslintrc.cjs",
+        "postcss.config.js"
     ],
     "exclude": ["node_modules", "cypress.config.ts"]
 }
