--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -41,10 +41,12 @@
         "@types/node": "18.11.9",
         "@types/pixelmatch": "^5.2.4",
         "@types/pngjs": "^6.0.1",
-        "@antfu/eslint-config": "^0.39.5",
         "canvas": "^2.10.2",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
+        "eslint-plugin-unused-imports": "^3.0.0",
         "tsup": "^6.1.3",
         "typescript": "^5.1.6",
+        "typestrict": "^1.0.2",
         "vitest": "^0.34.4"
     },
     "publishConfig": {
