--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,23 +1,22 @@
 {
-  "compilerOptions": {
-    "esModuleInterop": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "outDir": "build",
-    "resolveJsonModule": true,
-    "skipDefaultLibCheck": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "strictNullChecks": true,
-    "target": "ESNext",
-  },
-  "include": [
-    "src",
-    "test"
-  ],
-  "exclude": [
-    "dist",
-    "build",
-    "node_modules"
-  ]
+    "compilerOptions": {
+        "esModuleInterop": true,
+        "module": "ESNext",
+        "moduleResolution": "Node",
+        "outDir": "build",
+        "resolveJsonModule": true,
+        "skipDefaultLibCheck": true,
+        "skipLibCheck": true,
+        "strict": true,
+        "strictNullChecks": true,
+        "target": "ESNext"
+    },
+    "include": [
+        "./src/**/*.ts",
+        "./test/**/*.ts",
+        "./.eslintrc.cjs",
+        "./tsup.config.ts",
+        "./vitest.config.ts"
+    ],
+    "exclude": ["dist", "build", "node_modules"]
 }
