--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -17,7 +17,6 @@
         "./src/**/*.ts",
         "./test/**/*.ts",
         "./.eslintrc.cjs",
-        "./build.config.js",
-        "./vitest.config.ts"
+        "./build.config.js"
     ]
 }
