--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -30,7 +30,6 @@
     "scripts": {
         "build": "tsup",
         "dev": "tsup --watch",
-        "test": "vitest",
         "lint": "eslint --ext .ts,.js .",
         "lint:fix": "eslint --fix --ext .ts,.js .",
         "format": "prettier src/**/*.ts",
@@ -46,8 +45,7 @@
         "eslint-plugin-unused-imports": "^3.0.0",
         "tsup": "^6.1.3",
         "typescript": "^5.1.6",
-        "typestrict": "^1.0.2",
-        "vitest": "^0.34.4"
+        "typestrict": "^1.0.2"
     },
     "publishConfig": {
         "access": "public"
