--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -17,6 +17,7 @@
         "./src/**/*.ts",
         "./test/**/*.ts",
         "./.eslintrc.cjs",
-        "./build.config.js"
+        "./build.config.js",
+        "./vitest.config.ts"
     ]
 }
