--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@dach/cli",
-    "version": "1.1.0",
+    "name": "dach",
+    "version": "1.3.3",
     "description": "Command line interface for Dach",
     "author": "Maciej Kukielka <matthiaskukielka@gmail.com>",
     "keywords": [
@@ -47,11 +47,12 @@
     },
     "dependencies": {
         "@changesets/cli": "^2.26.2",
-        "@dach/shared": "workspace:*",
         "canvas": "^2.10.2",
         "chalk": "^4.1.2",
         "commander": "^11.0.0",
         "conf": "^10.1.2",
+        "dach-shared": "workspace:*",
+        "dotenv": "^16.3.1",
         "yoga-layout-prebuilt": "^1.10.0",
         "zod": "^3.22.2"
     },
