--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@dach/cli",
-    "version": "1.1.0",
+    "name": "dach",
+    "version": "1.3.3",
     "description": "Command line interface for Dach",
     "author": "Maciej Kukielka <matthiaskukielka@gmail.com>",
     "keywords": [
@@ -47,23 +47,30 @@
     },
     "dependencies": {
         "@changesets/cli": "^2.26.2",
-        "@dach/shared": "workspace:*",
         "canvas": "^2.10.2",
         "chalk": "^4.1.2",
         "commander": "^11.0.0",
         "conf": "^10.1.2",
+        "dach-shared": "workspace:*",
+        "dotenv": "^16.3.1",
         "yoga-layout-prebuilt": "^1.10.0",
         "zod": "^3.22.2"
     },
     "devDependencies": {
-        "@antfu/eslint-config": "^0.39.5",
         "@types/node": "^20.4.8",
         "@types/pixelmatch": "^5.2.4",
         "@types/pngjs": "^6.0.1",
         "@types/yoga-layout": "^1.9.4",
+        "@typescript-eslint/eslint-plugin": "^6.11.0",
+        "@typescript-eslint/parser": "^6.11.0",
         "@vitest/coverage-v8": "^0.34.4",
         "cross-env": "^7.0.3",
         "eslint": "^8.43.0",
+        "eslint-config-typestrict": "^1.0.5",
+        "eslint-plugin-no-only-tests": "^3.1.0",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
+        "eslint-plugin-sonarjs": "^0.23.0",
+        "eslint-plugin-unused-imports": "^3.0.0",
         "esno": "^4.0.0",
         "execa": "^8.0.1",
         "pixelmatch": "^5.3.0",
