--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@dach/shared",
+    "name": "dach-shared",
     "version": "0.0.1",
     "description": "Shared features between `@dach/www` and `@dach/cli`.",
     "author": "Maciej Kukielka <matthiaskukielka@gmail.com>",
@@ -30,7 +30,6 @@
     "scripts": {
         "build": "tsup",
         "dev": "tsup --watch",
-        "test": "vitest",
         "lint": "eslint --ext .ts,.js .",
         "lint:fix": "eslint --fix --ext .ts,.js .",
         "format": "prettier src/**/*.ts",
@@ -41,11 +40,12 @@
         "@types/node": "18.11.9",
         "@types/pixelmatch": "^5.2.4",
         "@types/pngjs": "^6.0.1",
-        "@antfu/eslint-config": "^0.39.5",
         "canvas": "^2.10.2",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
+        "eslint-plugin-unused-imports": "^3.0.0",
         "tsup": "^6.1.3",
         "typescript": "^5.1.6",
-        "vitest": "^0.34.4"
+        "typestrict": "^1.0.2"
     },
     "publishConfig": {
         "access": "public"
